--- a/open.html
+++ b/open.html
@@ -1,62 +1,14 @@
-<!-- <!DOCTYPE html>
-<html>
-
-  <head>
-    <style>
-      body {
-        background-color: black;
-        color: white;
-        font-size: 8em;
-        text-align: center;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        margin: 0;
-        padding: 0;
-      }
-
-      .pulse {
-        animation: pulse 1s infinite;
-      }
-
-      @keyframes pulse {
-        0% {
-          opacity: 1;
-        }
-
-        50% {
-          opacity: 0.5;
-        }
-
-        100% {
-          opacity: 1;
-        }
-      }
-    </style>
-  </head>
-
-<body>
-  <div id="closing">Closing page in...</div>
-  <div id="countdown"></div>
-  <script src="open.js"></script>
-  <script src="countdown.js"></script>
-</body>
-
-</html> -->
-
 <!DOCTYPE html>
 <html>
 
   <head>
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
 
       body {
-        background-color: black;
+        background: linear-gradient(rgb(10, 16, 20), rgb(14, 16, 20));
         color: white;
-        font-family: 'Roboto Condensed', sans-serif;
+        font-family: 'Share Tech Mono', monospace, Arial, sans-serif;
         font-size: 8em;
         text-align: center;
         display: flex;
@@ -66,11 +18,13 @@
         height: 100vh;
         margin: 0;
         padding: 0;
+        border: 1px solid white;
+        opacity: 0.8;
       }
 
       #closing {
         font-size: 0.4em;
-        margin-bottom: 0.1em;
+        margin-bottom: 1em;
         opacity: 0.8;
       }
 
