--- a/options.html
+++ b/options.html
@@ -1,38 +1,164 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
+
   <head>
-    <title>Clone in VS Code Options</title>
+    <title>GITGOIN OPTIONS</title>
+    <link rel="stylesheet" type="text/css" href="onboardingstyle.css">
     <style>
-      div {
-        margin-top: 10px;
+      @import url("https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap");
+
+      /* Base styles */
+      body {
+        font-family: "Share Tech Mono", monospace;
+        background: linear-gradient(rgb(10, 16, 20), rgb(14, 16, 20));
+        color: white;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-size: 2em;
       }
+
+      @media(max-width: 600px) {
+        body {
+          font-size: 1.5em;
+        }
+      }
+
+      /* Container styles */
+      .option-container {
+        display: flex;
+        justify-content: space-between;
+        width: 50%;
+        margin: 0 auto;
+      }
+
+      /* Element styles */
+      div {
+        margin-top: 1em;
+        text-align: center;
+      }
+
       p {
-        margin-top: 3px;
+        margin-top: 0.5em;
+      }
+
+      select,
+      button {
+        font-family: "Share Tech Mono", monospace;
+        padding: 4px;
+        border: none;
+        border-radius: 8px;
+        background: hsl(var(--r-frontground-2), 0.025);
+        color: white;
+        cursor: pointer;
+        font-size: 1em;
+        background-image: linear-gradient(to right, #65ceb9, #666666, #808080, #ffffff);
+        background-size: 400% 400%;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-clip: text;
+        animation: gradient 15s ease infinite;
+        outline: 2px solid;
+        outline-offset: 2px;
+      }
+
+      select {
+        margin-top: 15px;
+      }
+
+      select option:hover {
+        background: #333;
+      }
+
+      select:hover,
+      button:hover {
+        background-image: linear-gradient(to right, #ffffff, #808080, #65ceb9);
+      }
+
+      button {
+        margin-top: 2em;
+      }
+
+      /* ID styles */
+      #save {
+        padding: 0.2em;
+        margin: 1.4em;
+        border-radius: 0.2em;
+        font-size: 0.9em;
+      }
+
+      #save:hover {
+        color: white;
+        background-color: transparent;
+      }
+
+      /* Footer styles */
+      footer {
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        color: white;
+        text-align: center;
+        padding: 10px 0;
+        font-size: 0.5em;
+      }
+
+      footer a {
+        color: white;
+        text-decoration: none;
+      }
+
+      footer img {
+        height: 24px;
+        width: 24px;
       }
     </style>
   </head>
-  <body>
-    <div>
-      Protocol:
-      <select id="protocol">
-        <option value="HTTPS">HTTPS</option>
-        <option value="SSH">SSH</option>
-      </select>
-    </div>
-    <div>
-      Open in:
-      <select id="application">
-        <option value="VS Code">VS Code</option>
-        <option value="VS Code Insiders">VS Code Insiders</option>
-        <option value="VSCodium">VSCodium</option>
-        <option value="VSCodium Insiders">VSCodium Insiders</option>
-      </select>
-    </div>
-    <div>
-      <button id="save">Save</button>
-    </div>
-    <p id="status"></p>
 
-    <script src="options.js"></script>
+  <body style="display: flex; flex-direction: column;">
+    <main class="main" style="flex: 1;">
+      <div class="box">
+        <div class="flex">
+          <img src="./icons/256.png" alt="GitGoin' logo" style="height: 72px; width: 72px;">
+        </div>
+        <div> PROTOCOL: <select id="protocol">
+            <option value="HTTPS">HTTPS</option>
+            <option value="SSH">SSH</option>
+          </select>
+        </div>
+        <div> DEFAULT EDITOR: <select id="application">
+            <option value="Cursor">CURSOR</option>
+            <option value="VS Code">VS CODE</option>
+            <option value="VS Code Insiders">VS CODE - INSIDERS</option>
+            <option value="VSCodium">VSCODIUM</option>
+            <option value="VSCodium Insiders">VSCODIUM - INSIDERS</option>
+          </select>
+        </div>
+        <div>
+          <button id="save">SAVE</button>
+        </div>
+        <p id="status"></p>
+        <script src="options.js"></script>
+        <!-- Added footer -->
+        <footer>
+          <a href="https://github.com/itsbrex/git-goin-clone-repo-extension" aria-label="itsbrex github profile"
+            class="footer-octicon" title="source code">
+            <svg aria-hidden="true" class="octicon octicon-mark-github" height="32" version="1.1" viewbox="0 0 16 16"
+              width="32" style="fill: #fff; stroke: #000;">
+              <path fill-rule="evenodd"
+                d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z">
+              </path>
+            </svg>
+          </a>
+          <p>made by <a href="https://links.dev/brian" target="_blank" rel="noopener noreferrer"
+              class="gradient-text">brex</a></p>
+        </footer>
   </body>
+
 </html>
