--- a/options.html
+++ b/options.html
@@ -125,7 +125,7 @@
     <main class="main" style="flex: 1;">
       <div class="box">
         <div class="flex">
-          <img src="./icons/256.png" alt="GitGoin' logo" style="height: 72px; width: 72px;">
+          <img src="./icons/256.png" alt="GitGoin' logo" style="height: 72px; width: 72px; margin: auto;">
         </div>
         <div> PROTOCOL: <select id="protocol">
             <option value="HTTPS">HTTPS</option>
@@ -145,9 +145,8 @@
         </div>
         <p id="status"></p>
         <script src="options.js"></script>
-        <!-- Added footer -->
         <footer>
-          <a href="https://github.com/itsbrex/git-goin-clone-repo-extension" aria-label="itsbrex github profile"
+          <a href="https://github.com/itsbrex/git-goin-clone-repo-extension" aria-label="source code"
             class="footer-octicon" title="source code">
             <svg aria-hidden="true" class="octicon octicon-mark-github" height="32" version="1.1" viewbox="0 0 16 16"
               width="32" style="fill: #fff; stroke: #000;">
@@ -156,8 +155,8 @@
               </path>
             </svg>
           </a>
-          <p>made by <a href="https://links.dev/brian" target="_blank" rel="noopener noreferrer"
-              class="gradient-text">brex</a></p>
+          <p>made by <a href="https://links.dev/brian" target="_blank" rel="noopener noreferrer" class="gradient-text"
+              title="my links" aria-label="itsbrex social links">brex</a></p>
         </footer>
   </body>
 
