add orion extension + update onboarding page styles

--- a/onboarding.html
+++ b/onboarding.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="onboardingstyle.css">
   </head>
 
-  <body style="display: flex; flex-direction: column; min-height: 100vh;">
+  <body style="display: flex;">
     <main class="main" style="flex: 1;">
       <div class="box">
         <div class="flex">
